--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/charts": "^3.30.0",
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.30.0",
     "@emotion/react": "^11.14.0",
@@ -22,6 +23,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.0",
     "recharts": "^3.5.1",
+    "sql.js": "^1.13.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/sql.js": "^1.4.9",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
